0.19.x/_sources/api/skimage.data.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`data`
===================
.. automodule:: skimage.data

.. currentmodule:: skimage.data
.. autosummary::

   skimage.data.astronaut
   skimage.data.binary_blobs
   skimage.data.brain
   skimage.data.brick
   skimage.data.camera
   skimage.data.cat
   skimage.data.cell
   skimage.data.cells3d
   skimage.data.checkerboard
   skimage.data.chelsea
   skimage.data.clock
   skimage.data.coffee
   skimage.data.coins
   skimage.data.colorwheel
   skimage.data.create_image_fetcher
   skimage.data.download_all
   skimage.data.eagle
   skimage.data.file_hash
   skimage.data.grass
   skimage.data.gravel
   skimage.data.horse
   skimage.data.hubble_deep_field
   skimage.data.human_mitosis
   skimage.data.immunohistochemistry
   skimage.data.kidney
   skimage.data.lbp_frontal_face_cascade_filename
   skimage.data.lfw_subset
   skimage.data.lily
   skimage.data.logo
   skimage.data.microaneurysms
   skimage.data.moon
   skimage.data.nickel_solidification
   skimage.data.page
   skimage.data.protein_transport
   skimage.data.retina
   skimage.data.rocket
   skimage.data.shepp_logan_phantom
   skimage.data.skin
   skimage.data.stereo_motorcycle
   skimage.data.text
   skimage.data.vortex



astronaut
---------

.. autofunction:: skimage.data.astronaut


.. include:: skimage.data.astronaut.examples

binary_blobs
------------

.. autofunction:: skimage.data.binary_blobs


.. include:: skimage.data.binary_blobs.examples

brain
-----

.. autofunction:: skimage.data.brain


.. include:: skimage.data.brain.examples

brick
-----

.. autofunction:: skimage.data.brick


.. include:: skimage.data.brick.examples

camera
------

.. autofunction:: skimage.data.camera


.. include:: skimage.data.camera.examples

cat
---

.. autofunction:: skimage.data.cat


.. include:: skimage.data.cat.examples

cell
----

.. autofunction:: skimage.data.cell


.. include:: skimage.data.cell.examples

cells3d
-------

.. autofunction:: skimage.data.cells3d


.. include:: skimage.data.cells3d.examples

checkerboard
------------

.. autofunction:: skimage.data.checkerboard


.. include:: skimage.data.checkerboard.examples

chelsea
-------

.. autofunction:: skimage.data.chelsea


.. include:: skimage.data.chelsea.examples

clock
-----

.. autofunction:: skimage.data.clock


.. include:: skimage.data.clock.examples

coffee
------

.. autofunction:: skimage.data.coffee


.. include:: skimage.data.coffee.examples

coins
-----

.. autofunction:: skimage.data.coins


.. include:: skimage.data.coins.examples

colorwheel
----------

.. autofunction:: skimage.data.colorwheel


.. include:: skimage.data.colorwheel.examples

create_image_fetcher
--------------------

.. autofunction:: skimage.data.create_image_fetcher


.. include:: skimage.data.create_image_fetcher.examples

download_all
------------

.. autofunction:: skimage.data.download_all


.. include:: skimage.data.download_all.examples

eagle
-----

.. autofunction:: skimage.data.eagle


.. include:: skimage.data.eagle.examples

file_hash
---------

.. autofunction:: skimage.data.file_hash


.. include:: skimage.data.file_hash.examples

grass
-----

.. autofunction:: skimage.data.grass


.. include:: skimage.data.grass.examples

gravel
------

.. autofunction:: skimage.data.gravel


.. include:: skimage.data.gravel.examples

horse
-----

.. autofunction:: skimage.data.horse


.. include:: skimage.data.horse.examples

hubble_deep_field
-----------------

.. autofunction:: skimage.data.hubble_deep_field


.. include:: skimage.data.hubble_deep_field.examples

human_mitosis
-------------

.. autofunction:: skimage.data.human_mitosis


.. include:: skimage.data.human_mitosis.examples

immunohistochemistry
--------------------

.. autofunction:: skimage.data.immunohistochemistry


.. include:: skimage.data.immunohistochemistry.examples

kidney
------

.. autofunction:: skimage.data.kidney


.. include:: skimage.data.kidney.examples

lbp_frontal_face_cascade_filename
---------------------------------

.. autofunction:: skimage.data.lbp_frontal_face_cascade_filename


.. include:: skimage.data.lbp_frontal_face_cascade_filename.examples

lfw_subset
----------

.. autofunction:: skimage.data.lfw_subset


.. include:: skimage.data.lfw_subset.examples

lily
----

.. autofunction:: skimage.data.lily


.. include:: skimage.data.lily.examples

logo
----

.. autofunction:: skimage.data.logo


.. include:: skimage.data.logo.examples

microaneurysms
--------------

.. autofunction:: skimage.data.microaneurysms


.. include:: skimage.data.microaneurysms.examples

moon
----

.. autofunction:: skimage.data.moon


.. include:: skimage.data.moon.examples

nickel_solidification
---------------------

.. autofunction:: skimage.data.nickel_solidification


.. include:: skimage.data.nickel_solidification.examples

page
----

.. autofunction:: skimage.data.page


.. include:: skimage.data.page.examples

protein_transport
-----------------

.. autofunction:: skimage.data.protein_transport


.. include:: skimage.data.protein_transport.examples

retina
------

.. autofunction:: skimage.data.retina


.. include:: skimage.data.retina.examples

rocket
------

.. autofunction:: skimage.data.rocket


.. include:: skimage.data.rocket.examples

shepp_logan_phantom
-------------------

.. autofunction:: skimage.data.shepp_logan_phantom


.. include:: skimage.data.shepp_logan_phantom.examples

skin
----

.. autofunction:: skimage.data.skin


.. include:: skimage.data.skin.examples

stereo_motorcycle
-----------------

.. autofunction:: skimage.data.stereo_motorcycle


.. include:: skimage.data.stereo_motorcycle.examples

text
----

.. autofunction:: skimage.data.text


.. include:: skimage.data.text.examples

vortex
------

.. autofunction:: skimage.data.vortex


.. include:: skimage.data.vortex.examples

